# fusegu

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  deny.toml  env.sample  openapi.yaml
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  deploy-docs.yml  labeler.yml  pr-audit.yml
doc/: api-v0-draft.yaml  database_design.md  database_schema.sql  db.md  dev-plan-claude-4-sonnet-v2.md  dev-plan-claude-4-sonnet.md  dev-plan-o3 v2.md  instruction.md
doc/api/: api-v0.1-draft.yaml
doc/database/: database_design.md  database_schema.sql  db.md
doc/plan/: dev-plan-claude-4-sonnet-v2.md
migrations/: 001_initial_schema.sql
src/: lib.rs  main.rs  server.rs
src/api/: account.rs  errors.rs  health.rs  mod.rs  transactions.rs  users.rs
src/auth/: api_key.rs  middleware.rs  mod.rs
src/config/: mod.rs
src/database/: mod.rs  postgres.rs  redis.rs
src/models/: account.rs  address.rs  api_key.rs  cart_item.rs  common.rs  credit_card.rs  device.rs  email.rs  health.rs  mod.rs  requests.rs  responses.rs  transaction.rs  user.rs
src/rules/: context.rs  engine.rs  fraud_rules.rs  mod.rs
src/scoring/: mod.rs
src/services/: feature_store.rs  mod.rs  transaction_service.rs  user_service.rs
src/utils/: crypto.rs  geo.rs  mod.rs  validation.rs
tests/: api_tests.rs  integration_tests.rs
